--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "firebase": "^10.9.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "prop-types": "^15.8.1",
@@ -21,6 +22,8 @@
     "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.22.2",
+    "react-simple-captcha": "^9.3.1",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "swiper": "^11.0.7"
   },
