--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "@tanstack/react-query": "^5.28.6",
+    "axios": "^1.6.8",
     "firebase": "^10.9.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
@@ -24,7 +26,8 @@
     "react-router-dom": "^6.22.2",
     "react-simple-captcha": "^9.3.1",
     "react-tabs": "^6.0.2",
-    "sort-by": "^1.2.0",
+    "sort-by": "^0.0.2",
+    "sweetalert2": "^11.6.13",
     "swiper": "^11.0.7"
   },
   "devDependencies": {
